--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="scripts/app.min.js"></script>
+        <!--<script src="scripts/app.min.js"></script>-->
+        <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>
     </head>
     <body>
         <h1>Demo</h1>
