Add notice for non-JS/non-MIDI users

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Demo</h1>
+        <div id="warning">
+            <p>This game requires JavaScript and the <a href="http://www.w3.org/TR/webmidi/">HTML5 Web MIDI API</a></p>
+            <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting <pre>chrome://flags#enable-web-midi</pre>
+            </p>
+        </div>
         <div id="menu"></div>
         <div id="game"></div>
     </body>
