--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
     <head>
         <!--<script src="scripts/app.min.js"></script>-->
         <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>
+        <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
     <body>
-        <h1>Demo</h1>
+        <h1>Songbirds</h1>
         <div id="warning">
             <p>This game requires JavaScript and the <a href="http://www.w3.org/TR/webmidi/">HTML5 Web MIDI API</a></p>
-            <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting <pre>chrome://flags#enable-web-midi</pre>
-            </p>
+            <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting:</p>
+            <pre>chrome://flags#enable-web-midi</pre>            
         </div>
         <div id="menu"></div>
         <div id="game"></div>
