Alter block rendering. Commonise constants.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--<script src="scripts/app.min.js"></script>-->
-        <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>
+        <script src="scripts/app.min.js"></script>
+        <!--<script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>-->
         <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
     <body>
@@ -10,7 +10,7 @@
         <div id="warning">
             <p>This game requires JavaScript and the <a href="http://www.w3.org/TR/webmidi/">HTML5 Web MIDI API</a></p>
             <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting:</p>
-            <pre>chrome://flags#enable-web-midi</pre>            
+            <pre>chrome://flags#enable-web-midi</pre>
         </div>
         <div id="menu"></div>
         <div id="game"></div>
