--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
     <body>
-        <h1>Songbirds</h1>
+        <h1>Balls</h1>
         <div id="warning">
             <p>This game requires JavaScript and the <a href="http://www.w3.org/TR/webmidi/">HTML5 Web MIDI API</a></p>
             <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting:</p>
