--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="scripts/app.min.js"></script>
-        <!--<script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>-->
+        <!--<script src="scripts/app.min.js"></script>-->
+        <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
     <body>
