Replace Web MIDI API with Web Audio API (for now)

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
     <body>
         <h1>Balls</h1>
         <div id="warning">
-            <p>This game requires JavaScript and the <a href="http://www.w3.org/TR/webmidi/">HTML5 Web MIDI API</a></p>
-            <p>In Chrome (or Opera), you can enable the Web MIDI API by visiting:</p>
-            <pre>chrome://flags#enable-web-midi</pre>
+            <p>This game requires JavaScript and the HTML5 <a href="http://www.w3.org/TR/webmidi/">Web Audio API</a></p>
+            <p>The Web Audio API is supported in Chrome, Firefox, Opera and Safari.</p>
         </div>
         <div id="menu"></div>
         <div id="game"></div>
