Minify CSS and HTML. Update JS reference as part of build.

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--<script src="scripts/app.min.js"></script>-->
+        <!-- build:js -->
         <script data-main="main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.js"></script>
+        <!-- endbuild -->
         <link rel="stylesheet" type="text/css" href="main.css"/>
     </head>
     <body>
         <div id="warning">
-            <p>This game requires JavaScript and the HTML5 <a href="http://www.w3.org/TR/webmidi/">Web Audio API</a></p>
+            <p>This game requires JavaScript and the HTML5 <a href="http://webaudio.github.io/web-audio-api/">Web Audio API</a></p>
             <p>The Web Audio API is supported in Chrome, Firefox, Opera and Safari.</p>
         </div>
         <div id="game"></div>
